--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "bonasunu <bonaventurasunu@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
+  },
+  "scripts": {
+    "dev": "nodemon index.js"
   }
 }
