--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "bonasunu <bonaventurasunu@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.4"
   },
   "scripts": {
     "dev": "nodemon index.js"
